# scl-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  gen_self_signed_certs.sh
.cargo/: audit.toml
.github/workflows/: audit.yml  publish-dry-run.yml  rust.yml
benches/comparison/: README.md  common.sh  config_p0.json  config_p1.json  main.rs  plot.py  protocols.rs  run_all.sh  scenarios.rs  shape.sh
docs/: TODO-2026-06-02.md  protocol-architecture-option-c-2026-06-09.md  roadmap.md  scl-rs-audit-2026-06-02.md  scl-rs-testing-and-examples-plan.md
examples/: additive_shr_secure_sum.rs  bandwidth_flamegraph.rs  config_p0.json  config_p1.json  real_tls_send_recv.rs  schnorr_pok.rs  secure_stats_flamegraph.rs  send_different_types.rs  simple_send_recv.rs
examples/secure_covariance/: main.rs  preprocessing.rs
src/: abbreviate.rs  lib.rs  protocol.rs
src/math/: matrix.rs  mod.rs  poly.rs  ring.rs  vector.rs
src/math/ec/: mod.rs  secp256k1.rs
src/math/field/: lagrange.rs  mersenne61.rs  mod.rs  naf.rs  secp256k1_prime.rs  secp256k1_scalar.rs
src/math/fields/: mersenne61.rs  mod.rs
src/net/: channel.rs  mod.rs  tcp.rs
src/net/simulation/: channel.rs  context.rs  event.rs  executor.rs  hook.rs  manager.rs  mod.rs  network.rs  runtime.rs  simulator.rs  switchboard.rs  transport.rs
src/net/simulation/switchboard/: mod.rs  recv.rs
src/protocol/: mod.rs
src/protocol/passive_shamir/: double_rand_share.rs  mod.rs  mul.rs  open_king.rs  rand_share.rs  triple.rs
src/protocol/share/: deal.rs  mod.rs  open.rs
src/ss/: additive.rs  feldman.rs  mod.rs  packed.rs  shamir.rs
tests/: additive.rs  additive_tests.rs  feldman.rs  lagrange.rs  lagrange_tests.rs  matrix.rs  mersenne61.rs  mersenne61_test.rs  naf.rs  packet.rs  passive_shamir.rs  poly.rs  prime_secp256k1.rs  protocol_share.rs  recv_timeout.rs  scalar_secp256k1.rs  secp256k1.rs  shamir.rs  simulator.rs  vector.rs
tests/common/: mod.rs
tests/simulator/: mod.rs  simulator.rs
