[package]
name = "scl-rs"
version = "0.5.0"
edition = "2021"
authors = ["Hernan Vanegas <hdvanegasm@gmail.com>"]
rust-version = "1.85.1"

repository = "https://github.com/hdvanegasm/scl-rs"
readme = "README.md"
keywords = ["mpc", "secret-sharing", "cryptography"]
categories = ["cryptography"]
description = "Rust toolkit for prototyping and testing secure multiparty computation (MPC) protocols inspired in Secure Computation Library."
license = "AGPL-3.0-or-later"
exclude = ["certs/", "gen_self_signed_certs.sh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"
rand = "0.10"
log = "0.4"
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
crypto-bigint = { version = "0.7", features = ["serde"] }
tokio = { version = "1", features = [
  "net",
  "io-util",
  "time",
  "rt",
  "macros",
  "sync",
] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures-util = "0.3"
rustls-webpki = "0.103"

[dev-dependencies]
async-trait = "0.1"
rand_chacha = "0.10.0"
rcgen = "0.14.8"
tempfile = "3.27.0"
